Fixed bugs and improved readability

--- a/snake.css
+++ b/snake.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gainsboro;
+    background-color: rgb(217, 233, 215);
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
